<package>
  <name>robpath</name>
  <version>0.6.0</version>
  <description>
    This package provides robpath packages.
  </description>
  <maintainer email="jorge.rodriguez@aimen.es">Jorge Rodríguez-Araújo</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <metapackage/>
  </export>
</package>
