<package>
  <name>robpath</name>
  <version>0.7.0</version>
  <description>
    This package provides robpath packages.
  </description>
  <author email="grrodri@gmail.com">Jorge Rodríguez-Araújo</author>
  <maintainer email="baltasar.lodeiro@aimen.es">Baltasar Lodeiro-Señarís</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <metapackage/>
  </export>
</package>
