<?xml version="1.0"?>
<package>
  <name>robpath_part</name>
  <version>0.5.0</version>
  <description>The robpath_part package.</description>
  <author email="jorge.rodriguez@aimen.es">Jorge Rodríguez-Araújo</author>
  <maintainer email="jorge.rodriguez@aimen.es">Jorge Rodríguez-Araújo</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
